config done testnet

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -74,8 +74,8 @@ BLOCK_TRANSFORMER=clique
 # FOOTER_FORUM_LINK_ENABLED=
 # FOOTER_FORUM_LINK=
 FOOTER_TELEGRAM_LINK_ENABLED=true
-FOOTER_TELEGRAM_LINK=https://te.me/iv7dev
-FOOTER_GITHUB_LINK=https://github.com/iv7dev
+FOOTER_TELEGRAM_LINK=
+FOOTER_GITHUB_LINK=
 FOOTER_LOGO=/images/bspchainlogo.png
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
@@ -170,8 +170,8 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # TOKEN_ID_MIGRATION_CONCURRENCY=
 # TOKEN_ID_MIGRATION_BATCH_SIZE=
 # INDEXER_INTERNAL_TRANSACTIONS_TRACER_TYPE=
-WEBAPP_URL=https://bspscan.com
-API_URL=https://api.bspscan.com
+WEBAPP_URL=https://testnet.bspscan.com
+API_URL=https://apitest.bspscan.com
 SHOW_ADDRESS_MARKETCAP_PERCENTAGE=true
 CHECKSUM_ADDRESS_HASHES=true
 CHECKSUM_FUNCTION=eth
@@ -194,7 +194,7 @@ SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
 # CHAIN ID
-CHAIN_ID=25219
+CHAIN_ID=93236
 ##############
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
@@ -206,7 +206,7 @@ RE_CAPTCHA_CLIENT_KEY=
 RE_CAPTCHA_V3_SECRET_KEY=
 RE_CAPTCHA_V3_CLIENT_KEY=
 RE_CAPTCHA_DISABLED=false
-JSON_RPC=https://rpc.bspchain.com
+JSON_RPC=https://rpctestnet.bspchain.com
 #API_RATE_LIMIT_DISABLED=true
 API_RATE_LIMIT_TIME_INTERVAL=1s
 API_RATE_LIMIT_BY_IP_TIME_INTERVAL=5m
