--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -2,19 +2,19 @@
 NEXT_PUBLIC_APP_HOST=bspscan.com
 NEXT_PUBLIC_APP_PROTOCOL=https
 # 
-NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc.bspchain.com
+NEXT_PUBLIC_NETWORK_RPC_URL=https://rpctestnet.bspchain.com
 NEXT_PUBLIC_NETWORK_NAME=BSP chain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=BSPChain
-NEXT_PUBLIC_NETWORK_ID=25219
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=BSP
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=BSP
+NEXT_PUBLIC_NETWORK_ID=93236
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=BSPT
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=BSPT
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
-NEXT_PUBLIC_IS_TESTNET=false
+NEXT_PUBLIC_IS_TESTNET=true
 
 # 
 NEXT_PUBLIC_API_BASE_PATH=/
 # NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
-NEXT_PUBLIC_API_HOST=bspscan.com
+NEXT_PUBLIC_API_HOST=testnet.bspscan.com
 NEXT_PUBLIC_API_PROTOCOL=https
 
 
@@ -26,21 +26,21 @@ NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/BusinessShop/bsp
 # UI configuration
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs','coin_price','market_cap']
 NEXT_PUBLIC_HOMEPAGE_SHOW_GAS_TRACKER=false
-NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, rgb(255, 204, 51) 0%, rgb(255, 153, 0) 100%), var(--chakra-colors-blue-400)
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, #f6b02c 0%, #adf679 100%), var(--chakra-colors-blue-400)
 
 # Sidebar
-NEXT_PUBLIC_NETWORK_LOGO=https://i.ibb.co/HGcbFcp/network-logo.png
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://i.ibb.co/wRSfrGw/network-logo-dark.png
-NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/jrn1XZt/Black-BS-logo-hor-03.png
+NEXT_PUBLIC_NETWORK_LOGO=https://i.ibb.co/25n90bK/BSP-Chain-09.png
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://i.ibb.co/3BKBRyp/BSP-Chain-10.png
+NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/TtR83h7/BSP-Chain-12.png
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
 # https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png
-NEXT_PUBLIC_OG_IMAGE_URL=https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png
+NEXT_PUBLIC_OG_IMAGE_URL=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
 
 # Favicon
 NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
 
 ## Crea un item de menu Others
-NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://stats.bspchain.com','text':'Public stats'},{'url':'https://www.businessshop.ai','text':'Business Shop'},{'url':'https://github.com/BusinessShop','text':'Github'}]
+NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://teststat.bspchain.com','text':'Public stats'},{'url':'https://www.businessshop.ai','text':'Business Shop'},{'url':'https://github.com/BusinessShop','text':'Github'}]
 
 # Footer
 NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/BusinessShop/bspchain-explorer/master/docker-compose/links/footer-links.json
@@ -60,8 +60,8 @@ NEXT_PUBLIC_AD_TEXT_PROVIDER=none
 
 
 #
-NEXT_PUBLIC_STATS_API_HOST=https://api.bspscan.com
-NEXT_PUBLIC_VISUALIZE_API_HOST=https://visualizer.bspscan.com
+NEXT_PUBLIC_STATS_API_HOST=https://apitest.bspscan.com
+NEXT_PUBLIC_VISUALIZE_API_HOST=https://vistest.bspscan.com
 
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 
