--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_APP_HOST=bspscan.com
 NEXT_PUBLIC_APP_PROTOCOL=https
 # 
 NEXT_PUBLIC_NETWORK_RPC_URL=https://rpctestnet.bspchain.com
-NEXT_PUBLIC_NETWORK_NAME=BSP chain TESTNET
+NEXT_PUBLIC_NETWORK_NAME="BSP chain TESTNET"
 NEXT_PUBLIC_NETWORK_SHORT_NAME=BSPChain
 NEXT_PUBLIC_NETWORK_ID=93236
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=BSPT
