--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,10 +1,10 @@
 #
-NEXT_PUBLIC_APP_HOST=bspscan.com
+NEXT_PUBLIC_APP_HOST=testnet.bspscan.com
 NEXT_PUBLIC_APP_PROTOCOL=https
 # 
 NEXT_PUBLIC_NETWORK_RPC_URL=https://rpctestnet.bspchain.com
-NEXT_PUBLIC_NETWORK_NAME="BSP chain TESTNET"
-NEXT_PUBLIC_NETWORK_SHORT_NAME=BSPChain
+NEXT_PUBLIC_NETWORK_NAME=BSP Chain Testnet 
+NEXT_PUBLIC_NETWORK_SHORT_NAME=BSP Testnet
 NEXT_PUBLIC_NETWORK_ID=93236
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=BSPT
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=BSPT
@@ -48,7 +48,7 @@ NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/BusinessShop/bspchain
 
 #Meta
 NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
-NEXT_PUBLIC_OG_DESCRIPTION="BSPChain is a tool "
+NEXT_PUBLIC_OG_DESCRIPTION="BSPChain is a tool"
 NEXT_PUBLIC_OG_IMAGE_URL="https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png"
 
 # Banner ads
