--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -29,8 +29,8 @@ NEXT_PUBLIC_HOMEPAGE_SHOW_GAS_TRACKER=false
 NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, #f6b02c 0%, #adf679 100%), var(--chakra-colors-blue-400)
 
 # Sidebar
-NEXT_PUBLIC_NETWORK_LOGO=https://i.ibb.co/25n90bK/BSP-Chain-09.png
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://i.ibb.co/3BKBRyp/BSP-Chain-10.png
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/BusinessShop/bspchain-explorer/master/docker-compose/assets/logobsp.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/BusinessShop/bspchain-explorer/master/docker-compose/assets/logobsp.svg
 NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/TtR83h7/BSP-Chain-12.png
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
 # https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png
