--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -11,7 +11,7 @@ ETHEREUM_JSONRPC_TRACE_URL=http://nlb-bspchain-testnet-8d7b3dcb269f15e9.elb.us-e
 
 NETWORK=BSPChain
 SUBNETWORK=Testnet
-LOGO=/images/bspchainlogo.png
+# LOGO=/images/bspchainlogo.png
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
@@ -76,7 +76,7 @@ BLOCK_TRANSFORMER=clique
 FOOTER_TELEGRAM_LINK_ENABLED=true
 FOOTER_TELEGRAM_LINK=
 FOOTER_GITHUB_LINK=
-FOOTER_LOGO=/images/bspchainlogo.png
+# FOOTER_LOGO=/images/bspchainlogo.png
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
 SUPPORTED_CHAINS={}
