--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -31,10 +31,10 @@ NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, 
 # Sidebar
 NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/BusinessShop/bspchain-explorer/master/docker-compose/assets/logobsp.svg
 NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/BusinessShop/bspchain-explorer/master/docker-compose/assets/logobsp.svg
-NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/TtR83h7/BSP-Chain-12.png
+NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/jrn1XZt/Black-BS-logo-hor-03.png
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
 # https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png
-NEXT_PUBLIC_OG_IMAGE_URL=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
+NEXT_PUBLIC_OG_IMAGE_URL=https://i.ibb.co/TKL2ykc/Black-BS-logo-hor-02.png
 
 # Favicon
 NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/x6CJP8Y/BSP-Chain-11.png
